force-app/main/default/objects/Country_Subsidiary__c/Country_Subsidiary__c.object-meta.xml
<CustomObject>
    <label>Country Subsidiary</label>
    <nameField>
        <label>Country Subsidiary Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CountrySubsidiary</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>