force-app/main/default/objects/Country_Subsidiary__c/fields/Communication_profile_cc__c.field-meta.xml
<CustomField>
    <fullName>Communication_profile_cc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication profile cc</label>
    <referenceTo>zqu__CommunicationProfile__c</referenceTo>
    <relationshipLabel>CountrySubsidiary (Communication profile cc)</relationshipLabel>
    <relationshipName>CountrySubsidiary1</relationshipName>
    <type>Lookup</type>
</CustomField>