force-app/main/default/objects/Country_Subsidiary__c/fields/Communication_Profile_Cont__c.field-meta.xml
<CustomField>
    <fullName>Communication_Profile_Cont__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Profile Cont</label>
    <referenceTo>zqu__CommunicationProfile__c</referenceTo>
    <relationshipLabel>CountrySubsidiary (Communication Profile Cont)</relationshipLabel>
    <relationshipName>CountrySubsidiary2</relationshipName>
    <type>Lookup</type>
</CustomField>