force-app/main/default/objects/Country_Subsidiary__c/fields/CommunicationProfilesSFID__c.field-meta.xml
<CustomField>
    <fullName>CommunicationProfilesSFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Communication Profile</label>
    <referenceTo>zqu__CommunicationProfile__c</referenceTo>
    <relationshipLabel>CountrySubsidiary</relationshipLabel>
    <relationshipName>CountrySubsidiary</relationshipName>
    <type>Lookup</type>
</CustomField>