force-app/main/default/objects/Country_Subsidiary__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <label>Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admetricks</fullName>
            </value>
            <value>
                <fullName>SW</fullName>
            </value>
            <value>
                <fullName>42matters</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>