force-app/main/default/objects/Country_Subsidiary__c/fields/Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Country_Id__c</fullName>
    <label>Country Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>