force-app/main/default/objects/Country_Subsidiary__c/fields/Invoice_Template_Ent__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Template_Ent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Invoice Template for Enterprise Customer</description>
    <label>Invoice Template Ent.</label>
    <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
    <relationshipLabel>CountrySubsidiary (Invoice Template Ent.)</relationshipLabel>
    <relationshipName>CountrySubsidiary3</relationshipName>
    <type>Lookup</type>
</CustomField>