force-app/main/default/objects/Country_Subsidiary__c/fields/InvoiceTemplateCCSFID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplateCCSFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template CC</label>
    <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
    <relationshipLabel>CountrySubsidiary</relationshipLabel>
    <relationshipName>CountrySubsidiary</relationshipName>
    <type>Lookup</type>
</CustomField>