force-app/main/default/objects/Country_Subsidiary__c/fields/InvoiceTemplateContrSFID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplateContrSFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template Contr Id -  - DO NOT US</label>
    <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
    <relationshipLabel>CountrySubsidiary (Invoice Template Contr Id -  - DO NOT US)</relationshipLabel>
    <relationshipName>CountrySubsidiary1</relationshipName>
    <type>Lookup</type>
</CustomField>