force-app/main/default/objects/Country_Subsidiary__c/fields/InvoiceTemplateWSFID__c.field-meta.xml
<CustomField>
    <fullName>InvoiceTemplateWSFID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Invoice Template W</label>
    <referenceTo>zqu__InvoiceTemplate__c</referenceTo>
    <relationshipLabel>CountrySubsidiary (Invoice Template W)</relationshipLabel>
    <relationshipName>CountrySubsidiary2</relationshipName>
    <type>Lookup</type>
</CustomField>