force-app/main/default/objects/Country_Subsidiary__c/fields/IsNoMobileWeb__c.field-meta.xml
<CustomField>
    <fullName>IsNoMobileWeb__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsNoMobileWeb</label>
    <type>Checkbox</type>
</CustomField>