force-app/main/default/objects/Country_Subsidiary__c/fields/ISOCode_3__c.field-meta.xml
<CustomField>
    <fullName>ISOCode_3__c</fullName>
    <label>ISOCode 3</label>
    <length>3</length>
    <type>Text</type>
</CustomField>