force-app/main/default/objects/Country_Subsidiary__c/fields/ISOCode__c.field-meta.xml
<CustomField>
    <fullName>ISOCode__c</fullName>
    <label>ISOCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>