force-app/main/default/objects/Country_Subsidiary__c/fields/No_Tax_Region__c.field-meta.xml
<CustomField>
    <fullName>No_Tax_Region__c</fullName>
    <label>No Tax Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>