force-app/main/default/objects/Country_Subsidiary__c/fields/No_UN_EU__c.field-meta.xml
<CustomField>
    <fullName>No_UN_EU__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>It is possible to sell from UK subsidiary although country is not an EU 
Field is used for Zuora integration dashboard in order to exclude country from subsidiary error list</inlineHelpText>
    <label>No UN EU</label>
    <type>Checkbox</type>
</CustomField>