force-app/main/default/objects/Country_Subsidiary__c/fields/Restricted_To_Sold_Country__c.field-meta.xml
<CustomField>
    <fullName>Restricted_To_Sold_Country__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If the country filter is restricted to be sold to this country only</inlineHelpText>
    <label>Restricted To Sold Country</label>
    <type>Checkbox</type>
</CustomField>