force-app/main/default/objects/Country_Subsidiary__c/fields/Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary__c</fullName>
    <label>Subsidiary</label>
    <length>100</length>
    <type>Text</type>
</CustomField>