force-app/main/default/objects/Country_Subsidiary__c/fields/Tax_Region__c.field-meta.xml
<CustomField>
    <fullName>Tax_Region__c</fullName>
    <label>Tax Region</label>
    <length>50</length>
    <type>Text</type>
</CustomField>