force-app/main/default/objects/Country_Subsidiary__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Country_Name__c</columns>
    <columns>NAME</columns>
    <columns>Subsidiary__c</columns>
    <columns>CommunicationProfilesSFID__c</columns>
    <columns>Communication_profile_cc__c</columns>
    <columns>Communication_Profile_Cont__c</columns>
    <columns>InvoiceTemplateCCSFID__c</columns>
    <columns>InvoiceTemplateWSFID__c</columns>
    <columns>Invoice_Template_Ent__c</columns>
    <columns>No_Tax_Region__c</columns>
    <columns>Taxable__c</columns>
    <columns>Tax_Region__c</columns>
    <columns>Tax_Rate__c</columns>
    <columns>No_UN_EU__c</columns>
    <columns>Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>